Agregué item 4 en grids

--- a/pages/lifestyle.html
+++ b/pages/lifestyle.html
@@ -34,22 +34,29 @@
                 <a class="link-grid" href="https://imerikamarie.com/aesthetic-summer-nails/" target="_blank">
                     <img class="grid-image" src="../images/4c4b37dc3d24c6472d7348e833b8ce11.jpg" alt="uñas-plateadas">
                     <h3 class="grid-titulo"> Inspo para tus uñas:</h3>
-                    <p class="grid-sub">20 ideas de uñas aesthetic para este verano 2024.</p>
                 </a>
+                <p class="grid-sub">20 ideas de uñas aesthetic para este verano 2024.</p>
             </div>
             <div class="grid-item grid-item2">
                 <a class="link-grid" href="https://imerikamarie.com/daily-habits-that-will-change-your-life/" target="_blank">
                     <img class="grid-image" src="../images/mejorar rutina.jpg" alt="matcha">
                 <h3 class="grid-titulo">Habitos diarios que cambiarán tu vida:</h3>
-                <p class="grid-sub">Te damos algunos tips para mejorar tu día a día.</p>
                 </a>
+                <p class="grid-sub">Te damos algunos tips para mejorar tu día a día.</p>
             </div>
             <div class="grid-item grid-item3">
                 <a class="link-grid" href=https://www.onthewineside.com.ar/post/world-best-voneyard-2023#:~:text=Catena%20Zapata%20se%20coron%C3%B3%20como,Diamandes%20(N%C2%B048) target="_blank">
                     <img class="grid-image" src="../images/bodega.jpg" alt="barricas">
                     <h3 class="grid-titulo"> Catena Zapata:</h3>
-                    <p class="grid-sub">La mejor bodega del mundo, es Argentina.</p>
                 </a>
+                <p class="grid-sub">La mejor bodega del mundo, es Argentina.</p>
+            </div>
+            <div class="grid-item grid-item4">
+                <a class="link-grid" href="https://imerikamarie.com/sephora-sale-best-products-at-sephora/" target="_blank">
+                    <img class="grid-image" src="../images/120439746b8de2cb475c45d8056029ed.jpg" alt="barricas">
+                    <h3 class="grid-titulo">Must have Sephora:</h3>
+                </a>
+                <p class="grid-sub">Los imperdibles de la última temporada de Sephora.</p>
             </div>
         </section>
     </main>
