--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,8 +42,6 @@
                 <div class="galeria-foto"><img src="./images/oldmoney1.jpg" alt="look 1"></div>
                 <div class="galeria-foto"><img src="./images/oldmoney2.jpg" alt="look 2"></div>
                 <div class="galeria-foto"><img src="./images/oldmoney3.jpg" alt="look 3"></div>
-                <div class="galeria-foto"><img src="./images/oldmoney4.jpg" alt="look 4"></div>
-                <div class="galeria-foto"><img src="./images/oldmoney5.jpg" alt="look 5"></div>
             </div>
         </section>
         <section class="galeria">
