Modifiqué el encabezado

--- a/index.html
+++ b/index.html
@@ -27,15 +27,12 @@
         </header>
     </section>
     <main>
-        <section class="hero">
-            <h1 class="hero-titulo">¿Qué te gusta de vos?</h1>
-            <div class="hero-container">
-                <p>Si te has preguntado ¿Qué es el estilo personal? <br>Es algo con lo que se nace o no. Si se puede aprender. Si es muy pronto o muy tarde para empezar. <br>Este espacio es para VOS.</p>
-                <p>La idea de esta comunidad es poder brindarte contenido exclusivo de moda, tendencias, viajes y lifestyle.</p>
-                <p>¿Estás lista?</p>
-            </div>
-        </section>
-
+        <div class="bienvenidos">
+            <h1 class="bienvenidos-titulo">¿Qué te gusta de vos?</h1>
+            <p>Si te has preguntado ¿Qué es el estilo personal? <br>Es algo con lo que se nace o no. Si se puede aprender. Si es muy pronto o muy tarde para empezar. <br>Este espacio es para VOS.</p>
+            <p>La idea de esta comunidad es poder brindarte contenido exclusivo de moda, tendencias, viajes y lifestyle.</p>
+            <p>¿Estás lista?</p>
+        </div>
         <section class="galeria">
             <h2 class="galeria-title">Estilo personal</h2>
             <div class="galeria-container">
