Agregué carousel de boostrap y SEO en index

--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -6,6 +6,7 @@
     <title>Tendencias</title>
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -28,19 +29,18 @@
         <div class="tendencias">
             <h1 class="tendencias-titulo">Tendencias</h1>
             <p> Vas a poder ver algunos secretos para que tu estilo sea más sofisticado y elegante. </p>
-            <p>Además vas a encontrar lo último en tendencias.</p>
         </div>
-        <section class="galeria">
-            <h2 class="galeria-title">¿A qué se refiere el termino OLD MONEY?</h2>
-            <div class="galeria-container">
+        <section class="galeria2">
+            <h2 class="galeria-title2"><strong>¿A qué se refiere el termino OLD MONEY?</strong></h2>
+            <div class="galeria-container2">
                 <div class="galeria-foto"><img src="../images/old-inicio.jpg" alt="look-old-money"></div>
                 <div class="galeria-foto"><img src="../images/google.jpg" alt="look-old-money"></div>
                 <div class="galeria-foto"><img src="../images/google2.jpg" alt="look-old-money"></div>
             </div>
         </section>
-        <section class="galeria">
+        <section class="galeria2">
             <h3 class="galeria-title"> Se caracteriza por una apariencia discreta y sofisticada, con énfasis en la calidad y la artesanía.</h3>
-            <span class="texto">
+            <span class="texto2">
                 <p>El estilo "Old Money" es una referencia al estilo de vida y la estética asociados con las familias ricas y aristocráticas que han heredado su riqueza y estatus a lo largo de varias generaciones.</p>
                 <p>La ropa suele ser clásica, atemporal y conservadora, con cortes y siluetas elegantes. Se prefiere la sastrería tradicional, los materiales de alta calidad y los detalles refinados. Los colores suelen ser neutros y sobrios, como el negro, el gris, el azul marino y el blanco, evitando los tonos brillantes o llamativos.</p>
                 <p>En cuanto a los accesorios, se opta por piezas de joyería sutiles y elegantes, como joyas de oro o plata, relojes clásicos y bolsos de diseño discreto. Los zapatos y los bolsos suelen ser de cuero de alta calidad y duraderos.</p>
@@ -48,13 +48,28 @@
                 <p>En  la construcción del estilo personal uno va adoptando nuevos conceptos y hábitos que no son para nada complicados, solo hay que hacerlos conscientes y se convierte en un estilo de vida. Algunas máximas para aplicar:</p>
             </span>
         </section>
-        <section class="galeria">
-            <div class="galeria-container">
-                <div class="galeria-foto"><img src="../images/sinfondo.webp" alt="look-old-money"></div>
-                <div class="galeria-foto"><img src="../images/outfit.webp" alt="look-old-money"></div>
-                <div class="galeria-foto"><img src="../images/oldmoneylook2.jpg" alt="look-old-money"></div>
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2500">
+                <img class="carousel-img" src="../images/oldmoneylook (1).jpg" class="d-block w-100" alt="outfit-verano-old-money">
+              </div>
+              <div class="carousel-item"  data-bs-interval="2500">
+                <img class="carousel-img" src="../images/oldmoneylook2-achicada.jpg" class="d-block w-100" alt="outfit-verano-old-money">
+              </div>
+              <div class="carousel-item"  data-bs-interval="2500">
+                <img class="carousel-img" src="../images/oldmoneylook3 (1).jpg" class="d-block w-100" alt="outfit-con-blazer-old-money">
+              </div>
             </div>
-        <section class="galeria">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        <section class="galeria2">
             <div class="tendencias-list">
                 <ol class="tendencias-items">
                     <li><strong><p>Buen cuidado personal: </strong>pude parecer obvio, pero tener la piel y el pelo sano, peinado, ayuda a un 70% a verse elegantes.</p></li>
@@ -70,8 +85,8 @@
                 </ol>
             </div>
         </section>
-        <section class="galeria">
-            <span class="texto">
+        <section class="galeria2">
+            <span class="texto2">
                 <p>En resumen, el estilo "Old Money" en moda se basa en la elegancia atemporal, la calidad y la discreción. </p>
                 <p>No tiene que ver con usar prendas de lujo ni con el estilo que elijas para vestirte, sino con la actitud,  el autoconocimiento y por suerte eso se entrena, como todo.</p>
                 <p>El sentirse sofisticado te da poder y seguridad,  a ponerlo en práctica.</p> 
@@ -89,5 +104,6 @@
             Copyright 2023 - The Style Club.
         </p>
 </footer> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
