--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <meta name="description" content="The Style Club, una comunidad para aprender sobre imágen personal y estilo. A demás vas a encontar contenido sobre viajes y las últimas tendencias en el mundo de la moda y del lifestyle.">
+    <meta name="keywords" content="Moda, Tendencias, Lifestyle, Viajes, Looks, Outfits">
     <link rel="shortcut icon" href="./images/favicongrande-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> <link rel="stylesheet" href="./css/main.css">
 </head>
