Terminé con SEO

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <meta name="description" content="The Style Club, una comunidad para aprender sobre imágen personal y estilo. A demás vas a encontar contenido sobre viajes y las últimas tendencias en el mundo de la moda y del lifestyle.">
-    <meta name="keywords" content="Moda, Tendencias, Lifestyle, Viajes, Looks, Outfits">
+    <meta name="description" content="The Style Club, una comunidad para descubrir el mundo de la imágen personal y el estilo. A demás vas a encontar contenido sobre viajes y las últimas tendencias en el mundo de la moda y del lifestyle.">
+    <meta name="keywords" content="Moda, Tendencias, Lifestyle, Viajes, Looks, Outfits, Blog de moda">
     <link rel="shortcut icon" href="./images/favicongrande-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -37,9 +37,9 @@
         <section class="galeria">
             <h2 class="galeria-title">Estilo personal</h2>
             <div class="galeria-container">
-                <div class="galeria-foto"><img src="./images/oldmoney1.jpg" alt="look 1"></div>
-                <div class="galeria-foto"><img src="./images/oldmoney2.jpg" alt="look 2"></div>
-                <div class="galeria-foto"><img src="./images/oldmoney3.jpg" alt="look 3"></div>
+                <div class="galeria-foto"><img src="./images/oldmoney1.jpg" alt="Conjunto de chaleco y pantalón sastrero crudo"></div>
+                <div class="galeria-foto"><img src="./images/oldmoney2.jpg" alt="Look de camisa negra y pantalón color crudo"></div>
+                <div class="galeria-foto"><img src="./images/oldmoney3.jpg" alt="Look de camisa celeste de lino en conjunto con pantalón color beige"></div>
             </div>
         </section>
         <section class="galeria">
