--- a/pages/lifestyle.html
+++ b/pages/lifestyle.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifestyle</title>
+    <meta name="description" content="Sumérgete en nuestro mundo de estilo de vida donde el equilibrio entre el lujo y la simplicidad se encuentra. En nuestra página de Lifestyle vas a descubrir inspiración para una vida bien vivida, consejos de bienestar, ideas para el hogar y sugerencias gastronómicas.">
+    <meta name="keywords" content="Lifestyle, Estilo de vida, Bienestar, Cultura, Consejos, Gastronomía, Inspiración">
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -39,21 +41,21 @@
             </div>
             <div class="grid-item grid-item2">
                 <a class="link-grid" href="https://imerikamarie.com/daily-habits-that-will-change-your-life/" target="_blank">
-                    <img class="grid-image" src="../images/mejorar rutina.jpg" alt="matcha">
+                    <img class="grid-image" src="../images/mejorar rutina.jpg" alt="Bebida-de-matcha">
                 <h3 class="grid-titulo">Habitos diarios que cambiarán tu vida:</h3>
                 </a>
                 <p class="grid-sub">Te damos algunos tips para mejorar tu día a día.</p>
             </div>
             <div class="grid-item grid-item3">
                 <a class="link-grid" href=https://www.onthewineside.com.ar/post/world-best-voneyard-2023#:~:text=Catena%20Zapata%20se%20coron%C3%B3%20como,Diamandes%20(N%C2%B048) target="_blank">
-                    <img class="grid-image" src="../images/bodega.jpg" alt="barricas">
+                    <img class="grid-image" src="../images/bodega.jpg" alt="Barricas de bodega">
                     <h3 class="grid-titulo"> Catena Zapata:</h3>
                 </a>
                 <p class="grid-sub">La mejor bodega del mundo, es Argentina.</p>
             </div>
             <div class="grid-item grid-item4">
                 <a class="link-grid" href="https://imerikamarie.com/sephora-sale-best-products-at-sephora/" target="_blank">
-                    <img class="grid-image" src="../images/120439746b8de2cb475c45d8056029ed.jpg" alt="barricas">
+                    <img class="grid-image" src="../images/120439746b8de2cb475c45d8056029ed.jpg" alt="Productos de maquillaje">
                     <h3 class="grid-titulo">Must have Sephora:</h3>
                 </a>
                 <p class="grid-sub">Los imperdibles de la última temporada de Sephora.</p>
