--- a/pages/moda.html
+++ b/pages/moda.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moda</title>
+    <meta name="description" content="Sumérgete en el fascinante mundo de la moda con nuestra sección exclusiva. Desde consejos de moda hasta análisis de looks, aquí encontrarás todo lo que necesitas para estar a la vanguardia del estilo.">
+    <meta name="keywords" content="Moda, Ropa, Estilo, Look, Accesorios, Inspiración">
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/main.css">
