--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <meta name="description" content="Estamos encantados de saber de ti. En nuestra sección de Contacto, podés comunicarte con nosotros de manera fácil y rápida.">
+    <meta name="keywords" content="Contacto, Formulario de contacto, Información, Correo electrónico, Telefono, Consultas, Soporte, Sugerencias, Comentarios">
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/main.css">
