--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tendencias</title>
+    <meta name="description" content="Explora nuestra sección de Tendencias y mantente al día con lo último en el mundo de la moda para inspirarte y ayudarte a incorporarlas en tu estilo.">
+    <meta name="keywords" content="Tendencias, Estilos, Moda actual, Innovación, Colores de moda, Temporada">
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -33,9 +35,9 @@
         <section class="galeria2">
             <h2 class="galeria-title2"><strong>¿A qué se refiere el termino OLD MONEY?</strong></h2>
             <div class="galeria-container2">
-                <div class="galeria-foto"><img src="../images/old-inicio.jpg" alt="look-old-money"></div>
-                <div class="galeria-foto"><img src="../images/google.jpg" alt="look-old-money"></div>
-                <div class="galeria-foto"><img src="../images/google2.jpg" alt="look-old-money"></div>
+                <div class="galeria-foto"><img src="../images/old-inicio.jpg" alt="Look sastrero color crudo."></div>
+                <div class="galeria-foto"><img src="../images/google.jpg" alt="Camisa a rayas y pantalón beige."></div>
+                <div class="galeria-foto"><img src="../images/google2.jpg" alt="Remera rayada en conjunto con pantalón de lino blanco."></div>
             </div>
         </section>
         <section class="galeria2">
@@ -51,13 +53,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2500">
-                <img class="carousel-img" src="../images/oldmoneylook (1).jpg" class="d-block w-100" alt="outfit-verano-old-money">
+                <img class="carousel-img" src="../images/oldmoneylook (1).jpg" class="d-block w-100" alt="Items en conjunto negro y accesorios dorados.">
               </div>
               <div class="carousel-item"  data-bs-interval="2500">
-                <img class="carousel-img" src="../images/oldmoneylook2-achicada.jpg" class="d-block w-100" alt="outfit-verano-old-money">
+                <img class="carousel-img" src="../images/oldmoneylook2-achicada.jpg" class="d-block w-100" alt="Crop top a rayas, pantalón corto negro y accesorios en juego.">
               </div>
               <div class="carousel-item"  data-bs-interval="2500">
-                <img class="carousel-img" src="../images/oldmoneylook3 (1).jpg" class="d-block w-100" alt="outfit-con-blazer-old-money">
+                <img class="carousel-img" src="../images/oldmoneylook3 (1).jpg" class="d-block w-100" alt="Look de camisa blanca, short de jean y blazer beige.">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
