--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viajes</title>
+    <meta name="description" content="Descubre destinos asombrosos, aventuras emocionantes y consejos de viaje expertos en nuestra sección de Viajes. Desde las maravillas naturales hasta las ciudades más vibrantes, te llevamos a un viaje alrededor del mundo">
+    <meta name="keywords" content="Viajes, Destinos, Turismo, Experiencias, Consejos de viajes, Vacaciones, Ciudades, Descubrir">
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -34,7 +36,7 @@
             <img class="card-img" src="../images/ciudades-bicicleta-europa.webp" class="card-img-top" alt="bicicleta-por-amsterdam">
             <div class="card-body">
               <h5 class="card-title">Las mejores ciudades de Europa para ir en bicicleta</h5>
-              <p class="card-text">¿Estás lista para recorrer algunas de las mejores ciudades de Europa en bicicleta? Tomaá nota de los destinos bike friendly y… ¡A pedalear!  </p>
+              <p class="card-text">¿Estás lista para recorrer algunas de las mejores ciudades de Europa en bicicleta? Tomá nota de los destinos bike friendly y… ¡A pedalear!  </p>
               <a href=https://www.civitatis.com/blog/ciudades-europa-bicicleta/ class="btn btn-primary" target="_blank">Ir al sitio</a>
             </div>
           </div>
@@ -44,7 +46,7 @@
               <p class="card-text">Septiembre es volver a la rutina, pero también significa que algunas de las ciudades más ‘chic’ de Europa se visten con sus mejores galas para celebrar su Semana de la Moda.</p>
               <a href="https://www.civitatis.com/blog/planes-semana-moda-europa/?_gl=1*1khegot*_up*MQ..&gclid=CjwKCAjwysipBhBXEiwApJOcuw7QuMiny2JY-oouKGX9qg0I9QDMJuAmHDR9jNms_XIhRcDcCS8pGRoCG3wQAvD_BwE&gclsrc=aw.ds" class="btn btn-primary" target="_blank">Ir al sitio</a>
             </div>
-            <img class="card-img" src="../images/ciudades-moda.webp" class="card-img-bottom" alt="semana-de-la-moda">
+            <img class="card-img" src="../images/ciudades-moda.webp" class="card-img-bottom" alt="Mujer con la Torre Eiffel de fondo">
         </div>
     </main>
     <footer class="footer">
