--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta name="description" content="The Style Club, una comunidad para descubrir el mundo de la imágen personal y el estilo. A demás vas a encontar contenido sobre viajes y las últimas tendencias en el mundo de la moda y del lifestyle.">
     <meta name="keywords" content="Moda, Tendencias, Lifestyle, Viajes, Looks, Outfits, Blog de moda">
     <link rel="shortcut icon" href="./images/favicongrande-removebg-preview.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> <link rel="stylesheet" href="./scss/estilos.css">
 </head>
 <body>
-    <section class="hero">
         <header class="header">
             <div class="logo">
                 <img src="./images/logochico-removebg-preview.png" alt="logo" height="100" >
@@ -26,7 +25,6 @@
                 </ul>     
             </nav>
         </header>
-    </section>
     <main>
         <div class="bienvenidos">
             <h1 class="bienvenidos-titulo">¿Qué te gusta de vos?</h1>
