--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Contacto, Formulario de contacto, Información, Correo electrónico, Telefono, Consultas, Soporte, Sugerencias, Comentarios">
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
 </head>
 <body>
     <header class="header">
