Eliminé archivo CSS anterior

--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -41,8 +41,8 @@
             </div>
         </section>
         <section class="galeria2">
-            <h3 class="galeria-title"> Se caracteriza por una apariencia discreta y sofisticada, con énfasis en la calidad y la artesanía.</h3>
-            <span class="texto2">
+            <h3 class="galeria-title2"> Se caracteriza por una apariencia discreta y sofisticada, con énfasis en la calidad y la artesanía.</h3>
+            <span class="texto">
                 <p>El estilo "Old Money" es una referencia al estilo de vida y la estética asociados con las familias ricas y aristocráticas que han heredado su riqueza y estatus a lo largo de varias generaciones.</p>
                 <p>La ropa suele ser clásica, atemporal y conservadora, con cortes y siluetas elegantes. Se prefiere la sastrería tradicional, los materiales de alta calidad y los detalles refinados. Los colores suelen ser neutros y sobrios, como el negro, el gris, el azul marino y el blanco, evitando los tonos brillantes o llamativos.</p>
                 <p>En cuanto a los accesorios, se opta por piezas de joyería sutiles y elegantes, como joyas de oro o plata, relojes clásicos y bolsos de diseño discreto. Los zapatos y los bolsos suelen ser de cuero de alta calidad y duraderos.</p>
