--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="description" content="The Style Club, una comunidad para descubrir el mundo de la imágen personal y el estilo. A demás vas a encontar contenido sobre viajes y las últimas tendencias en el mundo de la moda y del lifestyle.">
     <meta name="keywords" content="Moda, Tendencias, Lifestyle, Viajes, Looks, Outfits, Blog de moda">
     <link rel="shortcut icon" href="./images/favicongrande-removebg-preview.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> <link rel="stylesheet" href="./scss/estilos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="./scss/estilos.css">
 </head>
-<body>
+<body class="fade-in-fwd">
         <header class="header">
             <div class="logo">
                 <img src="./images/logochico-removebg-preview.png" alt="logo" height="100" >
@@ -26,7 +28,7 @@
             </nav>
         </header>
     <main>
-        <div class="bienvenidos">
+        <div class="bienvenidos ">
             <h1 class="bienvenidos-titulo">¿Qué te gusta de vos?</h1>
             <p>Si te has preguntado ¿Qué es el estilo personal? <br>Es algo con lo que se nace o no. Si se puede aprender. Si es muy pronto o muy tarde para empezar. <br>Este espacio es para VOS.</p>
             <p>La idea de esta comunidad es poder brindarte contenido exclusivo de moda, tendencias, viajes y lifestyle.</p>
