--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/estilos.css">
 </head>
-<body>
+<body class="fade-in-fwd">
     <header class="header">
         <div class="logo">
             <img src="../images/logochico-removebg-preview.png" alt="logo" height="100" >
