--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../scss/estilos.css">
 </head>
-<body>
+<body class="fade-in-fwd">
     <header class="header">
         <div class="logo">
             <img src="../images/logochico-removebg-preview.png" alt="logo" height="100">
