--- a/pages/moda.html
+++ b/pages/moda.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Moda, Ropa, Estilo, Look, Accesorios, Inspiración">
     <link rel="shortcut icon" href="../images/favicongrande-removebg-preview.png"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../scss/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body class="fade-in-fwd">
     <header class="header">
